--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "@macrostrat/color-utils": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/column-views": "workspace:*",
-    "@macrostrat/corelle": "^2.0.0",
+    "@macrostrat/corelle": "^2.0.1",
     "@macrostrat/data-sheet2": "workspace:*",
     "@macrostrat/feedback-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
+    "@macrostrat/map-components": "workspace:*",
     "@macrostrat/map-interface": "workspace:*",
     "@macrostrat/mapbox-react": "workspace:^2.1.0",
     "@macrostrat/mapbox-styles": "workspace:*",
