--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "stylus": "^0.55.0",
-    "typescript": "^5.1.6",
-    "vite-plugin-rewrite-all": "^1.0.1"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@blueprintjs/core": "^5.10.2",
@@ -138,6 +137,7 @@
     "vike-react": "^0.4.11",
     "vite": "^5.2.11",
     "vite-plugin-cesium": "^1.2.22",
+    "vite-plugin-inspect": "^0.8.4",
     "zustand": "^4.5.1"
   },
   "prettier": {},
