Basic passing test

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,3 +7,12 @@ pnpFallbackMode: all
 pnpMode: loose
 
 yarnPath: .yarn/releases/yarn-4.2.2.cjs
+
+packageExtensions:
+  debug@*:
+    dependencies:
+      supports-color: "*"
+
+  vite@*:
+    dependencies:
+      supports-color: "*"
