--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@macrostrat-web/security": "workspace:*",
     "@macrostrat-web/settings": "workspace:*",
     "@macrostrat-web/sift": "workspace:*",
+    "@macrostrat-web/text-toolchain": "workspace:*",
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
     "@macrostrat/auth-components": "workspace:*",
@@ -107,6 +108,7 @@
     "d3-selection": "^1.0.0",
     "d3-shape": "^3.2.0",
     "esbuild": "^0.20.0",
+    "esbuild-register": "^3.5.0",
     "express": "^4.18.2",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
@@ -138,6 +140,8 @@
     "vite-plugin-cesium": "^1.2.22",
     "zustand": "^4.5.1"
   },
-  "prettier": {},
+  "prettier": {
+    "proseWrap": "always"
+  },
   "packageManager": "yarn@4.2.2"
 }
