Starting point for typescript server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "node ./server/index.js",
-    "server:dev": "node --env-file=.env ./server/index.js",
+    "server:dev": "tsx ./server/index.ts",
     "format": "prettier --write src packages",
     "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
     "dev:storybook": "yarn workspace @macrostrat/storybook run dev",
@@ -90,6 +90,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.7",
+    "@universal-middleware/express": "^0.0.2",
     "@visx/axis": "^2.14.0",
     "@visx/scale": "^2.2.2",
     "@vitejs/plugin-react": "^4.0.4",
@@ -129,6 +130,7 @@
     "swagger-ui-react": "^5.12.3",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
+    "tsx": "^4.11.2",
     "use-debounce": "^9.0.4",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
