--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,13 @@ docker-compose.yaml
 !.yarn/sdks
 !.yarn/versions
 
+# IntelliJ
+.idea/workspace.xml
+.idea/tasks.xml
+
+
 # For ignoring static files
 *.png
-*.jpg 
+*.jpg
 
 .vite
