--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
     "@turf/centroid": "^6.5.0",
+    "@turf/line-intersect": "^7.0.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
