--- a/package.json
+++ b/package.json
@@ -81,8 +81,10 @@
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
-    "@turf/centroid": "^6.5.0",
+    "@turf/centroid": "^7.0.0",
+    "@turf/distance": "^7.0.0",
     "@turf/line-intersect": "^7.0.0",
+    "@turf/nearest-point-on-line": "^7.0.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
