Major improvements to correlation diagrams
- Combine some components of map and column correlation diagrams
- Unit popovers
- Refactor state
- Improve unit selection panel
- Slight improvements to styles

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@macrostrat-web/security": "workspace:*",
     "@macrostrat-web/settings": "workspace:*",
     "@macrostrat-web/sift": "workspace:*",
+    "@macrostrat-web/utility-functions": "workspace:*",
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
     "@macrostrat/auth-components": "workspace:*",
