--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "d3-shape": "^3.2.0",
     "esbuild": "^0.20.0",
     "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
