--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -24,13 +24,13 @@ jobs:
           # New: apply the 'latest' tag to non-prerelease semver tags
           tags: |
             type=raw,value=sha-{{sha}}
-            type=raw,value=latest-itb
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
+            type=raw,value=latest-itb,enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')}}
             type=raw,value=latest-,suffix={{date 'YYYYMMDDHHmmss'}},enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
             type=raw,value=latest-itb-,suffix={{date 'YYYYMMDDHHmmss'}},enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')}}
-            type=ref,event=pr,suffix=-{{date 'YYYYMMDDHHmmss'}}
-            type=ref,event=branch,suffix=-{{date 'YYYYMMDDHHmmss'}}
+            type=ref,event=pr
+            type=ref,event=branch
             type=semver,pattern={{version}}
-            type=semver,pattern={{version}}-{{date 'YYYYMMDDHHmmss'}}
           flavor: |
             latest=false
       - name: Set up Docker BuildX
