--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -27,7 +27,7 @@ jobs:
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
             type=raw,value=latest-itb,enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')}}
             type=raw,value=latest-,suffix={{date 'YYYYMMDDHHmmss'}},enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
-            type=raw,value=latest-itb-,suffix={{date 'YYYYMMDDHHmmss'}},enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')}}
+            type=raw,value=latest-itb-,suffix={{date 'YYYYMMDDHHmmss'}}
             type=ref,event=pr
             type=ref,event=branch
             type=semver,pattern={{version}}
