Make column builder package installable

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -16,3 +16,7 @@ packageExtensions:
   vite@*:
     dependencies:
       supports-color: "*"
+
+  '@next/react-dev-overlay@*':
+    peerDependencies:
+      react: '*'
