--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@macrostrat/*": ["deps/web-components/packages/*/src"],
       "@macrostrat/corelle": ["node_modules/@macrostrat/corelle/src"],
       "@macrostrat-web/*": ["packages/*/src"],
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "#/*": ["pages/*"]
     }
   },
   "include": [
@@ -19,6 +20,7 @@
     "deps/cesium-martini/src/**/*",
     "deps/web-components/packages/*/src/**/*",
     "packages/*/src/**/*",
-    "src/**/*"
+    "src/**/*",
+    "pages/**/*"
   ]
 }
