--- a/packages/column-builder/package.json
+++ b/packages/column-builder/package.json
@@ -8,10 +8,10 @@
   },
   "module": "src/index.ts",
   "dependencies": {
-    "@blueprintjs/core": "^4.3.0",
-    "@blueprintjs/icons": "^4.10.1",
+    "@blueprintjs/core": "^5.10.5",
+    "@blueprintjs/icons": "^5.10.0",
     "@blueprintjs/popover2": "^1.2.1",
-    "@blueprintjs/select": "^4.4.1",
+    "@blueprintjs/select": "^5.2.1",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/data-components": "workspace:*",
     "@macrostrat/form-components": "workspace:*",
@@ -23,13 +23,9 @@
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
     "mapbox-gl": "^2.8.2",
-    "next": "13",
-    "next-transpile-modules": "^9.0.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.0",
-    "react-color": "^2.19.3",
-    "react-dom": "^18",
-    "sass": "^1.56.1"
+    "react-color": "^2.19.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
