--- a/packages/column-builder/package.json
+++ b/packages/column-builder/package.json
@@ -15,6 +15,7 @@
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/data-components": "workspace:*",
     "@macrostrat/form-components": "workspace:*",
+    "@macrostrat-web/settings": "workspace:*",
     "@macrostrat/hyper": "^2.0.1",
     "@macrostrat/ui-components": "workspace:*",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
