--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -10,6 +10,7 @@
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {
+    "@macrostrat-web/settings": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "async": "^1.5.2",
     "chart.js": "^1.0.2",
