--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@yarnpkg/sdks": "^3.1.0",
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
+    "sass-embedded": "^1.79.1",
     "stylus": "^0.55.0",
     "typescript": "^5.1.6",
     "vite-plugin-rewrite-all": "^1.0.1",
