--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "esprima": "^4.0.1",
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
+    "fuse.js": "^7.0.0",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
