--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -4,13 +4,49 @@ on:
   push:
     branches: ["main"]
     tags:
-      - 'v*.*.*' # glob for semver tags (including prereleases)
+      - v[0-9]+.[0-9]+.[0-9]+ # Semver Release (non-prerelease)
   pull_request:
     branches: [main]
 
 jobs:
-  call-build-image:
-    uses: UW-Macrostrat/build-push/.github/workflows/build-push.yaml@main
-    secrets: inherit
-    with:
-      image: 'hub.opensciencegrid.org/macrostrat/web'
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: "recursive"
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: hub.opensciencegrid.org/macrostrat/web
+          # New: apply the 'latest' tag to non-prerelease semver tags
+          tags: |
+            type=raw,value=sha-{{sha}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
+            type=raw,value=latest-itb,enable=${{ startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')}}
+            type=raw,value=latest-,suffix={{date 'YYYYMMDDHHmmss'}},enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
+            type=raw,value=latest-itb-,suffix={{date 'YYYYMMDDHHmmss'}}
+            type=ref,event=pr
+            type=ref,event=branch,suffix=-{{date 'YYYYMMDDHHmmss'}}
+            type=semver,pattern={{version}}
+          flavor: |
+            latest=false
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v2
+      - name: Login to OSG DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: hub.opensciencegrid.org
+          username: ${{ vars.HARBOR_CLI_NAME }}
+          password: ${{ secrets.HARBOR_CLI_SECRET }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
