--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@yarnpkg/sdks": "^3.1.0",
+    "chalk": "^5.3.0",
+    "http-proxy-middleware": "^3.0.3",
     "prettier": "^2.7.1",
     "react-arborist": "^3.4.0",
     "react-text-annotate-blend": "^1.2.0",
