saved location feature updated

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "tsx ./server/index.ts",
-    "server:dev": "tsx --env-file=.env ./server/index.ts",
+    "server:dev": "tsx ./server/index.ts",
     "format": "prettier --write src packages",
     "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
     "dev:storybook": "yarn workspace @macrostrat/storybook run dev",
@@ -38,6 +38,7 @@
     "@macrostrat/storybook": "workspace:*",
     "@mdx-js/rollup": "^2.3.0",
     "@types/esprima": "^4",
+    "@types/prop-types": "^15",
     "@types/underscore": "^1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
@@ -52,8 +53,9 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.10.2",
+    "@blueprintjs/icons": "^5.13.0",
     "@blueprintjs/select": "^5.1.4",
-    "@blueprintjs/table": "^5.1.4",
+    "@blueprintjs/table": "^5.2.2",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat-web/data-sheet-test": "workspace:*",
@@ -70,14 +72,17 @@
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
     "@macrostrat/auth-components": "workspace:*",
+    "@macrostrat/cesium-viewer": "workspace:^",
     "@macrostrat/color-utils": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/column-views": "workspace:*",
+    "@macrostrat/concept-app-helpers": "workspace:^",
     "@macrostrat/corelle": "^2.0.1",
+    "@macrostrat/data-components": "workspace:^",
     "@macrostrat/data-sheet2": "workspace:*",
     "@macrostrat/feedback-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
-    "@macrostrat/map-components": "workspace:*",
+    "@macrostrat/map-components": "workspace:^",
     "@macrostrat/map-interface": "workspace:*",
     "@macrostrat/mapbox-react": "workspace:^2.1.0",
     "@macrostrat/mapbox-styles": "workspace:*",
@@ -103,9 +108,16 @@
     "@types/react-redux": "^7.1.7",
     "@universal-middleware/express": "^0.0.2",
     "@visx/axis": "^2.14.0",
+    "@visx/group": "^3.3.0",
     "@visx/scale": "^2.2.2",
+    "@visx/shape": "^3.5.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "@vx/axis": "^0.0.199",
+    "@vx/scale": "^0.0.199",
+    "@vx/shape": "^0.0.199",
+    "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.25.0",
+    "cesium": "^1.122.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
@@ -123,14 +135,17 @@
     "esprima": "^4.0.1",
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
+    "gl-matrix": "^3.4.3",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "jose": "^5.1.2",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.0",
     "react-cookie": "^3.0.4",
+    "react-datasheet": "^1.4.12",
     "react-dom": "^18.3.0",
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^7.2.0",
@@ -141,6 +156,7 @@
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "sirv": "^2.0.3",
+    "supercluster": "^8.0.1",
     "swagger-ui-react": "^5.12.3",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
