--- a/package.json
+++ b/package.json
@@ -148,10 +148,11 @@
     "tsx": "^4.11.2",
     "underscore": "^1.13.6",
     "use-debounce": "^9.0.4",
+    "use-element-dimensions": "^2.1.3",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
-    "vike": "^0.4.177",
-    "vike-react": "^0.4.15",
+    "vike": "^0.4.199",
+    "vike-react": "^0.5.7",
     "vite": "^5.3.2",
     "vite-plugin-cesium": "^1.2.22",
     "vite-plugin-inspect": "^0.8.4",
