--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "tsx ./server/index.ts",
-    "server:dev": "tsx --env-file=.env ./server/index.ts",
+    "server:dev": "tsx ./server/index.ts",
     "format": "prettier --write src packages",
     "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
+    "dev:storybook": "yarn workspace @macrostrat/storybook run dev",
     "start": "yarn run build && yarn run server",
     "test:runtime": "tsx tests/test-urls.ts",
     "test": "vitest"
   },
   "workspaces": [
     "deps/web-components/packages/*",
+    "deps/web-components/storybook",
     "deps/cesium-viewer",
     "deps/cesium-martini",
     "packages/*"
@@ -33,16 +35,15 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
+    "@macrostrat/storybook": "workspace:*",
     "@mdx-js/rollup": "^2.3.0",
+    "@types/esprima": "^4",
+    "@types/prop-types": "^15",
     "@types/underscore": "^1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@yarnpkg/sdks": "^3.1.0",
-    "chalk": "^5.3.0",
-    "http-proxy-middleware": "^3.0.3",
     "prettier": "^2.7.1",
-    "react-arborist": "^3.4.0",
-    "react-text-annotate-blend": "^1.2.0",
     "sass": "^1.49.0",
     "sass-embedded": "^1.79.1",
     "stylus": "^0.55.0",
@@ -116,7 +117,8 @@
     "@vx/shape": "^0.0.199",
     "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.25.0",
-    "chroma-js": "^3.0.0",
+    "cesium": "^1.122.0",
+    "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -133,7 +135,6 @@
     "esprima": "^4.0.1",
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
-    "fuse.js": "^7.0.0",
     "gl-matrix": "^3.4.3",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
@@ -162,12 +163,11 @@
     "tsx": "^4.11.2",
     "underscore": "^1.13.6",
     "use-debounce": "^9.0.4",
-    "use-element-dimensions": "^2.1.3",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
-    "vike": "^0.4.199",
-    "vike-react": "^0.5.7",
-    "vite": "^5.3.2",
+    "vike": "^0.4.177",
+    "vike-react": "^0.4.15",
+    "vite": "5.4.11",
     "vite-plugin-cesium": "^1.2.22",
     "vite-plugin-inspect": "^0.8.4",
     "zustand": "^4.5.1"
@@ -175,5 +175,5 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.5.1"
+  "packageManager": "yarn@4.3.1"
 }
