--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -32,6 +32,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.12"
+    "vite": "5.4.11"
   }
 }
