--- a/package.json
+++ b/package.json
@@ -161,7 +161,8 @@
   },
   "resolutions": {
     "cesium": "^1.123.1",
-    "resium:": "1.17.1"
+    "resium:": "1.17.1",
+    "@macrostrat/cesium-viewer": "portal:/Users/Daven/Projects/Macrostrat/Software/cesium-viewer"
   },
   "prettier": {
     "proseWrap": "always"
