--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@macrostrat/data-sheet": "^2.0.0",
     "@macrostrat/feedback-components": "^1.1.0",
     "@macrostrat/form-components": "^0.1.1",
-    "@macrostrat/hyper": "^2.2.1",
+    "@macrostrat/hyper": "^3.0.6",
     "@macrostrat/map-components": "portal:../web-components/packages/svg-map-components",
     "@macrostrat/map-interface": "^1.1.0",
     "@macrostrat/map-styles": "^1.0.3",
@@ -154,6 +154,7 @@
     "vike-react": "^0.5.7",
     "vite": "^5.3.2",
     "vite-plugin-cesium": "^1.2.22",
+    "vite-plugin-cjs-interop": "^2.1.6",
     "vite-plugin-inspect": "^0.8.4",
     "zustand": "^4.5.1"
   },
