--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
     "fuse.js": "^7.0.0",
+    "geologic-patterns": "2.0.0-dev1",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
