Upgrade paleogeography pages to use newer Corelle module

--- a/packages/column-builder/package.json
+++ b/packages/column-builder/package.json
@@ -13,11 +13,11 @@
     "@blueprintjs/popover2": "^1.2.1",
     "@blueprintjs/select": "^5.2.1",
     "@macrostrat-web/settings": "workspace:*",
-    "@macrostrat/column-components": "workspace:*",
-    "@macrostrat/data-components": "workspace:*",
-    "@macrostrat/form-components": "workspace:*",
+    "@macrostrat/column-components": "^1.0.0",
+    "@macrostrat/data-components": "^0.0.5",
+    "@macrostrat/form-components": "^0.1.0",
     "@macrostrat/hyper": "^3.0.6",
-    "@macrostrat/ui-components": "workspace:*",
+    "@macrostrat/ui-components": "^4.1.0",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@supabase/postgrest-js": "^0.36.0",
     "@types/mapbox__mapbox-gl-draw": "^1.2.3",
