--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@blueprintjs/core": "^5.10.2",
     "@blueprintjs/select": "^5.1.4",
     "@blueprintjs/table": "^5.1.4",
+    "@corelle/svg-map-layers": "^1.0.0",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat-web/column-builder": "workspace:*",
@@ -67,18 +68,17 @@
     "@macrostrat/color-utils": "^1.0.0",
     "@macrostrat/column-components": "^1.0.0",
     "@macrostrat/column-views": "^1.0.0",
-    "@macrostrat/corelle": "^2.0.1",
     "@macrostrat/data-components": "^0.0.5",
     "@macrostrat/data-sheet": "^2.0.0",
-    "@macrostrat/feedback-components": "^1.1.0",
-    "@macrostrat/form-components": "^0.1.1",
+    "@macrostrat/feedback-components": "^1.0.0",
+    "@macrostrat/form-components": "^0.1.0",
     "@macrostrat/hyper": "^3.0.6",
-    "@macrostrat/map-interface": "^1.1.0",
-    "@macrostrat/map-styles": "^1.0.3",
+    "@macrostrat/map-interface": "^1.2.0",
+    "@macrostrat/map-styles": "^1.1.0",
     "@macrostrat/mapbox-react": "^2.4.0",
     "@macrostrat/mapbox-utils": "^1.3.2",
     "@macrostrat/style-system": "^0.2.0",
-    "@macrostrat/svg-map-components": "^1.0.0",
+    "@macrostrat/svg-map-components": "^1.0.1",
     "@macrostrat/timescale": "^2.1.0",
     "@macrostrat/ui-components": "^4.1.0",
     "@react-hook/size": "^2.1.2",
@@ -160,26 +160,7 @@
   },
   "resolutions": {
     "cesium": "^1.123.1",
-    "resium:": "1.17.1",
-    "@macrostrat/api-types": "portal:../web-components/packages/api-types",
-    "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
-    "@macrostrat/column-components": "portal:../web-components/packages/column-components",
-    "@macrostrat/column-views": "portal:../web-components/packages/column-views",
-    "@macrostrat/data-components": "portal:../web-components/packages/data-components",
-    "@macrostrat/data-sheet": "portal:../web-components/packages/data-sheet",
-    "@macrostrat/feedback-components": "portal:../web-components/packages/feedback-components",
-    "@macrostrat/form-components": "portal:../web-components/packages/form-components",
-    "@macrostrat/map-interface": "portal:../web-components/packages/map-interface",
-    "@macrostrat/map-styles": "portal:../web-components/packages/map-styles",
-    "@macrostrat/mapbox-react": "portal:../web-components/packages/mapbox-react",
-    "@macrostrat/mapbox-utils": "portal:../web-components/packages/mapbox-utils",
-    "@macrostrat/stratigraphy-utils": "portal:../web-components/packages/stratigraphy-utils",
-    "@macrostrat/style-system": "portal:../web-components/packages/style-system",
-    "@macrostrat/svg-map-components": "portal:../web-components/packages/svg-map-components",
-    "@macrostrat/timescale": "portal:../web-components/packages/timescale",
-    "@macrostrat/ui-components": "portal:../web-components/packages/ui-components",
-    "@macrostrat/hyperstyle-loader": "portal:../web-components/toolchain/hyperstyle-loader",
-    "@macrostrat/vite-plugin-hyperstyles": "portal:../web-components/toolchain/vite-plugin-hyperstyles"
+    "resium:": "1.17.1"
   },
   "prettier": {
     "proseWrap": "always"
