--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,9 @@ compressionLevel: mixed
 enableGlobalCache: false
 
 packageExtensions:
+  "@next/react-dev-overlay@*":
+    peerDependencies:
+      react: "*"
   debug@*:
     dependencies:
       supports-color: "*"
@@ -10,12 +13,8 @@ packageExtensions:
     dependencies:
       supports-color: "*"
 
-  '@next/react-dev-overlay@*':
-    peerDependencies:
-      react: '*'
-
 pnpFallbackMode: all
 
 pnpMode: loose
 
-yarnPath: .yarn/releases/yarn-4.5.1.cjs
+yarnPath: .yarn/releases/yarn-4.6.0.cjs
