--- a/package.json
+++ b/package.json
@@ -114,12 +114,14 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.20.0",
     "esbuild-register": "^3.5.0",
     "esprima": "^4.0.1",
     "express": "^4.21.2",
     "express-http-proxy": "^2.0.0",
     "fuse.js": "^7.0.0",
+    "geoip-lite": "^1.4.10",
     "geologic-patterns": "2.0.0-dev1",
     "hex-to-css-filter": "^5.4.0",
     "history": "^5.3.0",
@@ -165,5 +167,10 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "dependenciesMeta": {
+    "geoip-lite@1.4.10": {
+      "unplugged": true
+    }
+  }
 }
