--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "tsx ./server/index.ts",
-    "server:dev": "tsx --env-file=.env ./server/index.ts",
+    "server:dev": "nodemon --watch server --watch .pnp.cjs --exec tsx --env-file=.env ./server/index.ts",
     "format": "prettier --write src packages",
     "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
     "start": "yarn run build && yarn run server",
@@ -38,6 +38,7 @@
     "@yarnpkg/sdks": "^3.1.0",
     "chalk": "^5.3.0",
     "http-proxy-middleware": "^3.0.3",
+    "nodemon": "^3.1.9",
     "prettier": "^2.7.1",
     "sass-embedded": "^1.79.1",
     "stylus": "^0.55.0",
