--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "tsx ./server/index.ts",
-    "server:dev": "nodemon --watch server --watch .pnp.cjs --exec tsx --env-file=.env ./server/index.ts",
+    "server:dev": "nodemon --watch server --watch .pnp.cjs --watch .env --exec tsx --env-file=.env ./server/index.ts",
     "format": "prettier --write src packages",
     "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
     "start": "yarn run build && yarn run server",
