--- a/package.json
+++ b/package.json
@@ -63,21 +63,21 @@
     "@macrostrat-web/sift": "workspace:*",
     "@macrostrat-web/text-toolchain": "workspace:*",
     "@macrostrat-web/utility-functions": "workspace:*",
-    "@macrostrat/api-types": "^1.0.0",
-    "@macrostrat/color-utils": "^1.0.0",
-    "@macrostrat/column-components": "^1.0.3",
-    "@macrostrat/column-views": "portal:../web-components/packages/column-views",
-    "@macrostrat/data-components": "^0.0.6",
-    "@macrostrat/data-sheet": "^2.0.1",
+    "@macrostrat/api-types": "^1.1.0",
+    "@macrostrat/color-utils": "^1.1.0",
+    "@macrostrat/column-components": "^1.1.0",
+    "@macrostrat/column-views": "^2.0.0",
+    "@macrostrat/data-components": "^0.1.0",
+    "@macrostrat/data-sheet": "^2.0.2",
     "@macrostrat/feedback-components": "^1.0.1",
-    "@macrostrat/form-components": "^0.1.2",
+    "@macrostrat/form-components": "^0.2.1",
     "@macrostrat/hyper": "^3.0.6",
-    "@macrostrat/map-interface": "^1.2.4",
-    "@macrostrat/map-styles": "^1.1.1",
-    "@macrostrat/mapbox-react": "^2.5.0",
-    "@macrostrat/mapbox-utils": "^1.4.0",
-    "@macrostrat/style-system": "^0.2.0",
-    "@macrostrat/svg-map-components": "^1.0.3",
+    "@macrostrat/map-interface": "^1.3.0",
+    "@macrostrat/map-styles": "^1.2.0",
+    "@macrostrat/mapbox-react": "^2.6.0",
+    "@macrostrat/mapbox-utils": "^1.5.0",
+    "@macrostrat/style-system": "^0.2.1",
+    "@macrostrat/svg-map-components": "^1.0.4",
     "@macrostrat/timescale": "^2.1.1",
     "@macrostrat/ui-components": "^4.1.2",
     "@react-hook/size": "^2.1.2",
@@ -157,28 +157,6 @@
     "vite-plugin-cjs-interop": "^2.1.6",
     "vite-plugin-inspect": "^0.8.4",
     "zustand": "^5.0.1"
-  },
-  "resolutions": {
-    "cesium": "^1.123.1",
-    "resium:": "1.17.1",
-    "@macrostrat/api-types": "portal:../web-components/packages/api-types",
-    "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
-    "@macrostrat/column-components": "portal:../web-components/packages/column-components",
-    "@macrostrat/data-components": "portal:../web-components/packages/data-components",
-    "@macrostrat/data-sheet": "portal:../web-components/packages/data-sheet",
-    "@macrostrat/feedback-components": "portal:../web-components/packages/feedback-components",
-    "@macrostrat/form-components": "portal:../web-components/packages/form-components",
-    "@macrostrat/map-interface": "portal:../web-components/packages/map-interface",
-    "@macrostrat/map-styles": "portal:../web-components/packages/map-styles",
-    "@macrostrat/mapbox-react": "portal:../web-components/packages/mapbox-react",
-    "@macrostrat/mapbox-utils": "portal:../web-components/packages/mapbox-utils",
-    "@macrostrat/stratigraphy-utils": "portal:../web-components/packages/stratigraphy-utils",
-    "@macrostrat/style-system": "portal:../web-components/packages/style-system",
-    "@macrostrat/svg-map-components": "portal:../web-components/packages/svg-map-components",
-    "@macrostrat/timescale": "portal:../web-components/packages/timescale",
-    "@macrostrat/ui-components": "portal:../web-components/packages/ui-components",
-    "@macrostrat/hyperstyle-loader": "portal:../web-components/toolchain/hyperstyle-loader",
-    "@macrostrat/vite-plugin-hyperstyles": "portal:../web-components/toolchain/vite-plugin-hyperstyles"
   },
   "prettier": {
     "proseWrap": "always"
