Node linker changed

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "allotment": "^1.20.2",
     "axios": "^1.7.9",
+    "cesium": "^1.130.1",
     "chroma-js": "^3.0.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
