--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 compressionLevel: mixed
 
-enableGlobalCache: false
+enableGlobalCache: true
 
 packageExtensions:
   "@next/react-dev-overlay@*":
@@ -18,5 +18,3 @@ pnpFallbackMode: all
 pnpMode: loose
 
 yarnPath: .yarn/releases/yarn-4.8.1.cjs
-
-nodeLinker: node-modules
