--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      VITE_MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
-      VITE_MACROSTRAT_TILESERVER_DOMAIN='https://tileserver.staging.svc.macrostrat.org'
-      VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
+      VITE_MAPBOX_API_TOKEN: ${{ secrets.MAPBOX_API_TOKEN }}
+      VITE_MACROSTRAT_TILESERVER_DOMAIN: 'https://tileserver.staging.svc.macrostrat.org'
+      VITE_MACROSTRAT_API_DOMAIN: 'https://macrostrat.org'
 
     steps:
       - name: Checkout code
