--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -9,7 +9,7 @@ on:
     branches: [main]
 
 jobs:
-  smoke-test:
+  acceptance-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,6 +36,23 @@ jobs:
           yarn run dev &
           sleep 20 
 
-      - name: Run homepage check
+      - name: Run smoke tests on key URLs
         run: |
-          curl -s -o /dev/null -w "%{http_code}" http://localhost:3000 | grep 200
+          set -e  
+
+          declare -a urls=(
+            "http://localhost:3000/"
+            "http://localhost:3000/map/loc"
+            "http://localhost:3000/#/sift/"
+          )
+
+          for url in "${urls[@]}"; do
+            echo "Testing $url..."
+            status=$(curl -s -o /dev/null -w "%{http_code}" "$url")
+            echo "  → HTTP $status"
+            if [[ "$status" != "200" ]]; then
+              echo "❌ Unexpected status code: $status for $url"
+              exit 1
+            fi
+          done
+
