--- a/packages/column-footprint-editor/package.json
+++ b/packages/column-footprint-editor/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "my-project",
+  "name": "@macrostrat/column-footprint-editor",
+  "private": true,
+  "main": "src/index.tsx",
   "scripts": {
     "start": "ENV=development parcel serve -p 1235 ./src/index.html",
     "build": "ENV=production parcel build --public-url /column-topology/ ./src/index.html"
   },
-  "babel": {
-    "presets": [
-      "@parcel/babel-preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@parcel/babel-plugin-transform-runtime"
-    ]
-  },
   "dependencies": {
-    "@blueprintjs/core": "^4.5.1",
+    "@blueprintjs/core": "^5.10.2",
     "@blueprintjs/popover2": "^1.4.1",
-    "@blueprintjs/select": "^4.4.1",
-    "@macrostrat/ui-components": "^2.0.3",
+    "@blueprintjs/select": "^5.1.4",
+    "@macrostrat/ui-components": "^4.4.4",
     "@mapbox/mapbox-gl-draw": "^1.2.2",
-    "@parcel/transformer-svg-react": "^2.6.2",
     "@turf/nearest-point-on-line": "^5.1.5",
     "@types/mapbox__mapbox-gl-draw": "^1.2.4",
-    "axios": "^0.21.1",
+    "axios": "^1.11.0",
     "mapbox-gl": "^2.2.0",
     "mapbox-gl-draw-snap-mode": "^0.1.6",
-    "react": "^16.13.1",
+    "react": "^18.3.0",
     "react-color": "^2.19.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.3.0",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.3.0",
     "topojson-client": "^3.1.0"
-  },
-  "devDependencies": {
-    "@parcel/babel-plugin-transform-runtime": "^2.6.2",
-    "@parcel/transformer-stylus": "^2.0.0-beta.2",
-    "parcel": "^2.6.2",
-    "process": "^0.11.10"
   }
 }
