--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "jose": "^5.1.2",
+    "jotai": "^2.15.1",
     "mapbox-gl": "^3.13.0",
     "new-github-issue-url": "^1.0.0",
     "part-regex": "^0.1.2",
