--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist/*",
-    "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
+    "dev": "vike dev",
     "build": "vite build",
     "server": "tsx ./server/index.ts",
     "server:dev": "nodemon --watch server --watch .pnp.cjs --exec tsx --env-file=.env ./server/index.ts",
@@ -151,6 +151,7 @@
     "use-resize-observer": "^9.1.0",
     "vike": "^0.4.222",
     "vike-react": "^0.5.12",
+    "vike-server": "^1.0.25",
     "vite": "^7.2.2",
     "vite-css-modules": "^1.11.1",
     "vite-plugin-cesium": "^1.2.23",
