--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@macrostrat-web/utility-functions": "workspace:*",
     "@macrostrat/api-types": "^1.1.4",
     "@macrostrat/color-utils": "^1.1.2",
-    "@macrostrat/column-components": "^1.4.2",
+    "@macrostrat/column-components": "^1.5.0",
     "@macrostrat/column-views": "^2.4.3",
     "@macrostrat/data-components": "^0.2.2",
-    "@macrostrat/data-sheet": "^2.2.2",
+    "@macrostrat/data-sheet": "^2.2.3",
     "@macrostrat/feedback-components": "^1.1.10",
     "@macrostrat/form-components": "^0.2.5",
     "@macrostrat/hyper": "^3.0.6",
@@ -149,10 +149,10 @@
     "use-element-dimensions": "^2.1.3",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
-    "vike": "^0.4.222",
-    "vike-react": "^0.5.12",
+    "vike": "^0.4.252",
+    "vike-react": "^0.6.18",
     "vike-server": "^1.0.25",
-    "vite": "^7.2.2",
+    "vite": "^7.3.1",
     "vite-css-modules": "^1.11.1",
     "vite-plugin-cesium": "^1.2.23",
     "vite-plugin-cjs-interop": "^2.3.0",
@@ -161,5 +161,27 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.11.0"
+  "packageManager": "yarn@4.11.0",
+  "resolutions": {
+    "@macrostrat/api-types": "portal:../web-components/packages/api-types",
+    "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
+    "@macrostrat/column-components": "portal:../web-components/packages/column-components",
+    "@macrostrat/column-views": "portal:../web-components/packages/column-views",
+    "@macrostrat/data-components": "portal:../web-components/packages/data-components",
+    "@macrostrat/data-sheet": "portal:../web-components/packages/data-sheet",
+    "@macrostrat/feedback-components": "portal:../web-components/packages/feedback-components",
+    "@macrostrat/form-components": "portal:../web-components/packages/form-components",
+    "@macrostrat/map-interface": "portal:../web-components/packages/map-interface",
+    "@macrostrat/map-styles": "portal:../web-components/packages/map-styles",
+    "@macrostrat/mapbox-react": "portal:../web-components/packages/mapbox-react",
+    "@macrostrat/mapbox-utils": "portal:../web-components/packages/mapbox-utils",
+    "@macrostrat/static-map-utils": "portal:../web-components/packages/static-map-utils",
+    "@macrostrat/stratigraphy-utils": "portal:../web-components/packages/stratigraphy-utils",
+    "@macrostrat/style-system": "portal:../web-components/packages/style-system",
+    "@macrostrat/svg-map-components": "portal:../web-components/packages/svg-map-components",
+    "@macrostrat/timescale": "portal:../web-components/packages/timescale",
+    "@macrostrat/ui-components": "portal:../web-components/packages/ui-components",
+    "@macrostrat/hyperstyle-loader": "portal:../web-components/toolchain/hyperstyle-loader",
+    "@macrostrat/vite-plugin-hyperstyles": "portal:../web-components/toolchain/vite-plugin-hyperstyles"
+  }
 }
