--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.10.2",
+    "@blueprintjs/popover2": "^2.1.32",
     "@blueprintjs/select": "^5.1.4",
     "@blueprintjs/table": "^5.1.4",
     "@corelle/svg-map-layers": "^1.0.0",
